--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "dat.gui": "^0.7.9"
   }
 }
